[package]
name = "jose-b64"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
A pure Rust Base64 implementation for use in JOSE crates.
"""
documentation = "https://docs.rs/jose-b64"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-b64"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.63"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
