[package]
name = "jose-b64"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
A pure Rust Base64 implementation for use in JOSE crates.
"""
documentation = "https://docs.rs/jose-b64"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-b64"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.63"

[features]
secret = ["serde", "dep:zeroize", "dep:subtle"]
json = ["serde", "dep:serde_json"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.136", default-features = false, optional = true, features = ["alloc", "derive"] }
zeroize = { version = "1.5.7", default-features = false, optional = true, features = ["alloc", "serde"] }
serde_json = { version = "1.0.79", default-features = false, optional = true, features = ["alloc"] }
subtle = { version = "2.4.1", default-features = false, optional = true }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
