[package]
name = "jose-jwa"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Algorithm (JWA) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7518
"""
documentation = "https://docs.rs/jose-jwa"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwa"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
# Pin upper version of serde to work around https://github.com/serde-rs/serde/issues/2538
serde = { version = "1.0.160, <1.0.172", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
serde_json = "1.0.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
