[package]
name = "jose-jwk"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Key (JWK) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7517
"""
documentation = "https://docs.rs/jose-jwk"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwk"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[features]
rcrypto-p256 = ["rcrypto", "dep:p256"]
rcrypto-p384 = ["rcrypto", "dep:p384"]
rcrypto-rsa = ["rcrypto", "dep:rsa"]
rcrypto = ["dep:zeroize"]

[dependencies]
serde = { version = "1.0.160", default-features = false, features = ["alloc", "derive"] }
jose-b64 = { path = "../jose-b64", default-features = false, features = ["secret"] }
jose-jwa = { path = "../jose-jwa" }

# Optional Dependencies
url = { version = "2.3.1", default-features = false, optional = true, features = ["serde"] }

# Internal Dependencies
p256 = { version = "0.13.2", default-features = false, optional = true, features = ["arithmetic"] }
p384 = { version = "0.13.0", default-features = false, optional = true, features = ["arithmetic"] }
zeroize = { version = "1.6.0", default-features = false, optional = true, features = ["alloc"] }
rsa = { version = "0.9.0-pre.1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
