[package]
name = "jose-jws"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Signature (JWS) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7515
"""
documentation = "https://docs.rs/jose-jws"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jws"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.63"

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.85", default-features = false }
jose-b64 = { path = "../jose-b64", default-features = false, features = ["json"] }
jose-jwk = { path = "../jose-jwk", default-features = false }
jose-jwa = { path = "../jose-jwa" }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
