[package]
name = "jose-jws"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Signature (JWS) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7515
"""
documentation = "https://docs.rs/jose-jws"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jws"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
jose-b64 = { version = "0.1", default-features = false, features = ["json"], path = "../jose-b64" }
jose-jwa = { version = "0.1", path = "../jose-jwa" }
jose-jwk = { version = "0.1", default-features = false, path = "../jose-jwk" }
serde = { version = "1.0.160", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.97", default-features = false }
rand_core = { version = "0.6.4", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
