[package]
name = "jose-jwt"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Token (JWT) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7519
"""
documentation = "https://docs.rs/jose-jwt"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwt"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.63"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
