[package]
name = "jose"
version = "0.1.0"
edition = "2021"

[features]
jwk = []
jws = ["p256?/ecdsa", "p384?/ecdsa", "dep:serde_json"]
sha2 = ["dep:sha2", "dep:digest"]
hmac = ["dep:rand_core", "dep:hmac"]
p256 = ["dep:rand_core", "dep:p256"]
p384 = ["dep:rand_core", "dep:p384"]
rsa = ["dep:rand_core", "dep:rsa"]

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1.5.7", default-features = false, features = ["alloc", "serde"] }
subtle = { version = "2.4.1", default-features = false }

# Optional Dependencies
url = { version = "2.2.2", default-features = false, optional = true, features = ["serde"] }
rand = { version = "0.8.5", default-features = false, optional = true, features = ["std"] }

# Internal, Optional Dependencies (see above features)
serde_json = { version = "1.0.79", default-features = false, optional = true, features = ["alloc"] }
p256 = { version = "0.11.1", default-features = false, optional = true, features = ["arithmetic"] }
p384 = { version = "0.11.1", default-features = false, optional = true, features = ["arithmetic"] }
rand_core = { version = "0.6.3", default-features = false, optional = true }
digest = { version = "0.10.3", default-features = false, optional = true }
sha2 = { version = "0.10.2", default-features = false, optional = true }
hmac = { version = "0.12.1", default-features = false, optional = true }
rsa = { version = "0.6.1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.85"
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
