[package]
name = "jose"
version = "0.1.0"
edition = "2021"

[features]
jwk = ["jose-b64/secret"]
jws = ["p256?/ecdsa", "p384?/ecdsa", "dep:serde_json", "jose-b64/json"]
sha2 = ["dep:sha2", "dep:digest"]
hmac = ["dep:rand_core", "dep:hmac"]
p256 = ["dep:rand_core", "dep:p256"]
p384 = ["dep:rand_core", "dep:p384"]
rsa = ["dep:rand_core", "dep:rsa"]

[dependencies]
serde = { version = "1.0.160", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc", "serde"] }
subtle = { version = "2.5.0", default-features = false }
jose-b64 = { path = "../jose-b64" }
jose-jwa = { path = "../jose-jwa" }

# Optional Dependencies
url = { version = "2.3.1", default-features = false, optional = true, features = ["serde"] }
rand = { version = "0.8.5", default-features = false, optional = true, features = ["std"] }

# Internal, Optional Dependencies (see above features)
serde_json = { version = "1.0.96", default-features = false, optional = true, features = ["alloc"] }
p256 = { version = "0.13.2", default-features = false, optional = true, features = ["arithmetic"] }
p384 = { version = "0.13.0", default-features = false, optional = true, features = ["arithmetic"] }
rand_core = { version = "0.6.4", default-features = false, optional = true }
digest = { version = "0.10.6", default-features = false, optional = true }
sha2 = { version = "0.10.6", default-features = false, optional = true }
hmac = { version = "0.12.1", default-features = false, optional = true }
rsa = { version = "0.8.2", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.96"
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
